--- a/src/index.css
+++ b/src/index.css
@@ -445,12 +445,12 @@ svg.dropdown__icon path{
 
 /* avatar */
 
-.avatar{
+.avatar, .logout{
   height:5vh;
   width: 5vh;
 }
 
-.avatar svg {
+.avatar svg, .logout svg {
   width: 100%;
   height: 100%;
 }
