--- a/src/index.css
+++ b/src/index.css
@@ -728,6 +728,14 @@ svg.dropdown__icon path{
   grid-template-columns: repeat(4,1fr);
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  margin-top:auto;
+}
+
 /* Media queries */
 
 @media screen and (min-width: 480px){
