--- a/src/index.css
+++ b/src/index.css
@@ -375,7 +375,7 @@ svg.dropdown__icon path{
 /* filters */
 .filter__container{
   position: absolute;
-  top: 4%;
+  top: 3%;
   right:9%;
   width: 80%;
   color:var(--black);
@@ -388,6 +388,11 @@ svg.dropdown__icon path{
 .filter__container svg{
   height: 100%;
   width: 100%;
+}
+
+/* decks list*/
+.deck__list{
+  height:calc(var(--vh)*45); 
 }
 
 /* deck */
