--- a/src/index.css
+++ b/src/index.css
@@ -128,7 +128,11 @@ code {
 .page--container{
   position: relative;
   height: calc(65 * var(--vh));
+  width:90%;
   overflow-y: scroll;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .deck__list{
