--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,7 @@ code {
 
 .page--container{
   position: relative;
-  height: calc(65 * var(--vh));
+  min-height: calc(65 * var(--vh));
   width:100%;
   overflow-y: scroll;
   display: flex;
