--- a/src/index.css
+++ b/src/index.css
@@ -164,6 +164,15 @@ code {
   padding: 2rem 0rem;
 }
 
+.form--container{
+  position: relative;
+  width:100%;
+  overflow-y: scroll;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .form--input{
   outline:none;
   margin-bottom: 2vh;
