add margin to main

--- a/src/index.css
+++ b/src/index.css
@@ -165,9 +165,11 @@ code {
 }
 
 .form--container{
-  position: relative;
   width:100%;
   overflow-y: auto;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .form--input{
