--- a/src/index.css
+++ b/src/index.css
@@ -166,7 +166,9 @@ code {
 
 .form--container{
   width:100%;
-  min-height: 60vh;
+  height: 60vh;
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
 }
 
 .form--input{
