--- a/src/index.css
+++ b/src/index.css
@@ -130,6 +130,7 @@ code {
   height: calc(65 * var(--vh));
   width:100%;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   display: flex;
   align-items: center;
   flex-direction: column;
