--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,14 @@ code {
   height: 90%;
 }
 
+.profile__page--container{
+  position: relative;
+  height: 100%;
+  width:100%;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
 .page--container{
   position: relative;
   height: calc(65 * var(--vh));
