--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,7 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 90vh;
   width:100%;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
