--- a/src/index.css
+++ b/src/index.css
@@ -126,25 +126,47 @@ code {
   height: 90%;
 }
 
-.profile__page{
-  display: -webkit-flex;
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 90vh;
-  width:100%;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
-}
-
 .page--container{
   position: relative;
   height: calc(65 * var(--vh));
   width:100%;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+}
+
+.profile__page{
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 90vh;
+  padding-top: 50vh;
+  padding-bottom: 10vh;
+  overflow-y: scroll;
+} 
+
+
+/* profile page */
+
+.profile__heading{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color:var(--dark-grey)
+}
+
+.profile__avatar{
+  font-size:20vh;
+}
+
+.profile__username{
+  font-size:3.5vh;
+}
+
+.profile__userid{
+  font-size:3vh;
 }
 
 .deck__list{
