--- a/src/index.css
+++ b/src/index.css
@@ -138,6 +138,8 @@ code {
   display: -webkit-flex;
   display: flex;
   flex-direction: column;
+  -webkit-justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 90vh;
