--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,7 @@ code {
 .profile__page{
   display: flex;
   flex-direction: column;
+  flex: 1 1 auto;
   width: 100%;
   height: 90vh;
   padding-bottom: 10vh;
