--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,8 @@ a {
 .header{
   position:fixed;
   top:0;
-  width:100%;
+  left:0;
+  right:0;
   padding: 3vh 9% 2vh 9%;
   text-align: center;
   color: var(--grey);
