--- a/src/index.css
+++ b/src/index.css
@@ -194,7 +194,7 @@ code {
   align-items: center;
   margin: 0 auto;
   width:100%;
-  padding: 2rem 0rem;
+  padding:10vh 0 4vh 0rem;
 }
 
 .form--container{
