--- a/src/index.css
+++ b/src/index.css
@@ -128,7 +128,7 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 90%;
+  height: 80%;
 }
 
 .page--container{
@@ -800,8 +800,7 @@ main {
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin-top:auto;
-  margin-bottom:auto;
+  margin-top:5vh;
 }
 
 /* Media queries */
