--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,7 @@ code {
 }
 
 .page{
+  display:block;
   display: -webkit-flex;
   display: flex;
   position: relative;
@@ -129,6 +130,7 @@ code {
   justify-content: center;
   align-items: center;
   height: 80%;
+  text-align:center;
 }
 
 .page--container{
