--- a/src/index.css
+++ b/src/index.css
@@ -154,6 +154,19 @@ code {
   -webkit-overflow-scrolling: touch;
 }
 
+
+.popup__container{
+  position: absolute;
+  top:0;
+  left:0;
+  right: 0;
+  bottom:0;
+  background-color:rgba(46, 46, 46, .7);
+}
+
+
+/* profile page */
+
 .profile__page{
   display: block;
   width: 100%;
@@ -161,9 +174,6 @@ code {
   padding-bottom: 10vh;
   overflow-y: scroll;
 } 
-
-
-/* profile page */
 
 .profile__heading{
   display: flex;
