set popup styles

--- a/src/index.css
+++ b/src/index.css
@@ -176,6 +176,11 @@ code {
   margin: 0 2vh 0 0;
 }
 
+.popup__form--section{
+  width: 33%;
+  margin: 0 auto;
+}
+
 .popup__option--container{
   display: flex;
   margin: 1vh 0;
