--- a/src/index.css
+++ b/src/index.css
@@ -138,7 +138,6 @@ code {
   display:block;
   display: -webkit-flex;
   display: flex;
-  position: relative;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -154,14 +153,19 @@ code {
   -webkit-overflow-scrolling: touch;
 }
 
+/* popup */
 
 .popup__container{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
   position: absolute;
   top:0;
   left:0;
   right: 0;
   bottom:0;
   background-color:rgba(46, 46, 46, .95);
+  z-index: 30;
 }
 
 .popup__title{
@@ -191,6 +195,7 @@ code {
 .popup__option--name{
   text-align: left;
 }
+
 /* profile page */
 
 .profile__page{
