--- a/src/index.css
+++ b/src/index.css
@@ -499,7 +499,7 @@ svg.dropdown__icon path{
   justify-content: space-between;
   width:100%;
   background-color:var(--dark-grey);
-  margin:0 auto;
+  margin:.5vh auto;
   padding:.5rem 1.5rem;
   min-height: 100px;
   border-radius:2px;
