--- a/src/index.css
+++ b/src/index.css
@@ -200,7 +200,7 @@ code {
 .btn.popup__button{
   margin: 2vh auto;
   background-color:rgb(59, 231, 59);
-  color: var(--black);
+  color: var(--dark-grey);
 }
 
 /* profile page */
