--- a/src/index.css
+++ b/src/index.css
@@ -202,6 +202,7 @@ code {
   margin: 2vh auto;
   background-color:rgb(59, 231, 59);
   color: var(--dark-grey);
+  padding:3vw 0;
 }
 
 /* profile page */
