--- a/src/index.css
+++ b/src/index.css
@@ -169,6 +169,17 @@ code {
   overflow-y: scroll;
 }
 
+.popup__close{
+  position:relative;
+  width: 40px;
+  height: 40px;
+}
+
+.popup__close svg{
+  width: 100%;
+  height: 100%;
+}
+
 .popup__title{
   margin: 2vh 0;
 }
