--- a/src/index.css
+++ b/src/index.css
@@ -171,8 +171,8 @@ code {
 
 .popup__close{
   position:relative;
-  width: 40px;
-  height: 40px;
+  width: 4vh;
+  height: 4vh;
 }
 
 .popup__close svg{
