--- a/src/index.css
+++ b/src/index.css
@@ -761,6 +761,7 @@ svg.dropdown__icon path{
   -o-border-radius: 3px;
   box-shadow: 0 0 20px -5px #8f8f8f;
   text-transform:uppercase;
+  cursor: pointer;
 }
 
 
