--- a/src/index.css
+++ b/src/index.css
@@ -221,6 +221,7 @@ code {
   background-color:rgb(59, 231, 59);
   color: var(--dark-grey);
   padding:3vw 0;
+  width:69%;
 }
 
 /* profile page */
@@ -752,7 +753,7 @@ svg.dropdown__icon path{
   margin:.5rem auto;
   padding:4vw 0;
   font-family: Helvetica,sans-serif;
-  font-size:4vw;
+  font-size:3vw;
   font-weight: 600;
   letter-spacing: 1px;
   color:rgb(46, 46, 46);
@@ -894,21 +895,21 @@ main {
 @media screen and (min-width: 640px){
   .btn{
       padding:1.5vw 0;
-      font-size:3vw
+      font-size:3vw;
   }
 }
 
 @media screen and (min-width: 920px){
   .btn{
     padding:1.125vw 0;
-    font-size:2.25vw
+    font-size:2.25vw;
   }
 }
 
 @media screen and (min-width: 1240px){
   .btn{
     padding:.6vw 0;
-    font-size:1.25vw
+    font-size:1.25vw;
   }
 }
 
