--- a/src/index.css
+++ b/src/index.css
@@ -128,7 +128,11 @@ code {
 
 /* return */ 
 .return__block {
-  width: 100%;
+  display:flex;
+  justify-content: flex-end;
+  width: 90%;
+  margin: 0 auto;
+  cursor: pointer;
 }
 
 .return__icon{
