--- a/src/index.css
+++ b/src/index.css
@@ -130,8 +130,8 @@ code {
 .return__block {
   display:flex;
   justify-content: flex-end;
-  width:100%;
-  padding: 0 2rem;
+  width:90%;
+  margin: 0 auto;
   cursor: pointer;
 }
 
