--- a/src/index.css
+++ b/src/index.css
@@ -129,18 +129,19 @@ code {
 /* return */ 
 .return__block {
   display:flex;
-  justify-content: flex-end;
+  justify-content: center;
   width:90%;
   margin: 0 auto;
   cursor: pointer;
 }
 
 .return__icon{
-    color: var(--dark-grey);
+  color: var(--dark-grey);
 }
 
 .return__icon svg{
-    height:100%;
+  height:4vh;
+  width: 4vh;
 }
 
 .google__icon{
