--- a/src/index.css
+++ b/src/index.css
@@ -171,9 +171,10 @@ code {
   -webkit-overflow-scrolling: touch;
 }
 
-.page__modify{
+.page__deck{
   min-height: 100%;
   width: 100%;
+  background-color: #101010;
 }
 
 /* popup */
