--- a/src/index.css
+++ b/src/index.css
@@ -298,6 +298,10 @@ code {
   text-align: center;
 }
 
+.page__deck .form--input{
+  width: 80%;
+}
+
 .buttons__block{
   display: flex;
   flex-direction:column;
