--- a/src/index.css
+++ b/src/index.css
@@ -735,6 +735,30 @@ svg.dropdown__icon path{
   margin-top: 6vh !important;
 }
 
+.mr-1{
+  margin-right: 1vh !important;
+}
+
+.mr-2{
+  margin-right: 2vh !important;
+}
+
+.mr-3{
+  margin-right: 3vh !important;
+}
+
+.mr-4{
+  margin-right: 4vh !important;
+}
+
+.mr-5{
+  margin-right: 5vh !important;
+}
+
+.mr-6{
+  margin-right: 6vh !important;
+}
+
 .good__input,
 .good__input:focus{
   border-bottom: 2px solid var(--done);
