--- a/src/index.css
+++ b/src/index.css
@@ -314,6 +314,10 @@ code {
   padding:10vh 0 4vh 0rem;
 }
 
+.form--fieldset{
+  color: var(--dark-grey);
+}
+
 .form--container{
   width:100%;
   overflow-y: scroll; /* has to be scroll, not auto */
