--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
   width: 100vw;
   min-height: -webkit-fill-available;
   background-color: var(--white);
-  overflow: hidden;
+  overflow-y: scroll;
 }
 
 #root{
