--- a/src/index.css
+++ b/src/index.css
@@ -651,7 +651,8 @@ svg.dropdown__icon path{
 
 .subdeck__type{
   color: var(--white);
-  font-size: 4vw
+  font-size: 4vw;
+  text-transform: uppercase;
 }
 
 .subdeck__icon{
