--- a/src/index.css
+++ b/src/index.css
@@ -643,11 +643,14 @@ svg.dropdown__icon path{
 
 .subdeck__box{
   min-width: 70vw;
-  border: 1px solid var(--dark-grey);
 }
 
 .subdeck__heading{
   background-color: var(--dark-grey);
+}
+
+.subdeck__body{
+  border: 1px solid var(--dark-grey);
 }
 
 .subdeck__type{
