--- a/src/index.css
+++ b/src/index.css
@@ -659,6 +659,14 @@ svg.dropdown__icon path{
   text-transform: uppercase;
 }
 
+.subdeck__infos{
+  color: var(--black);
+  font-size: 2vh;
+}
+
+.subedeck__icon--list{
+  
+}
 
 .subdeck__icon{
   font-size: 4vh;
