--- a/src/index.css
+++ b/src/index.css
@@ -713,8 +713,16 @@ svg.dropdown__icon path{
   align-items: space-between;
 }
 
+.align-start{
+  align-items: flex-start;
+}
+
 .align-center{
   align-items: center;
+}
+
+.align-end{
+  align-items: flex-end;
 }
 
 .my-1{
