--- a/src/index.css
+++ b/src/index.css
@@ -674,6 +674,20 @@ svg.dropdown__icon path{
   cursor: pointer;
 }
 
+.loader__block{
+  height: 100vh;
+  width: 100%;
+}
+
+.loader{
+  height: 50px;
+  width: 50px;
+  color:rgb(59, 231, 59);
+  background-color: rgba(46, 46, 46, .95);
+  animation: loading 1s  ease-in-out infinite;
+  -webkit-animation: loading 1s  ease-in-out infinite;
+}
+
 /* Utilities */
 
 .d-none{
@@ -1102,4 +1116,24 @@ main {
   -moz-transition: opacity 1s ease;
   -ms-transition: opacity 1s ease;
   -o-transition: opacity 1s ease;
+}
+
+/* animations */
+
+@keyframes loading {
+    from{
+      transform: rotateZ(0deg);
+      -webkit-transform: rotateZ(0deg);
+      -moz-transform: rotateZ(0deg);
+      -ms-transform: rotateZ(0deg);
+      -o-transform: rotateZ(0deg);
+    }
+
+    to{
+      transform: rotateZ(360deg);
+      -webkit-transform: rotateZ(360deg);
+      -moz-transform: rotateZ(360deg);
+      -ms-transform: rotateZ(360deg);
+      -o-transform: rotateZ(360deg);
+    }
 }
