--- a/src/index.css
+++ b/src/index.css
@@ -675,8 +675,12 @@ svg.dropdown__icon path{
 }
 
 .loader__block{
-  height: 100vh;
-  width: 100%;
+  position: absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  z-index: 40;
 }
 
 .loader{
