--- a/src/index.css
+++ b/src/index.css
@@ -675,10 +675,8 @@ svg.dropdown__icon path{
 }
 
 .loader__block{
-  position: fixed;
-  top:0;
   width:100%;
-  bottom:0;
+  height: 100vh;
   z-index: 40;
 }
 
