--- a/src/index.css
+++ b/src/index.css
@@ -685,8 +685,8 @@ svg.dropdown__icon path{
   height: 50px;
   width: 50px;
   color:rgb(59, 231, 59);
-  animation: loading 1s  ease-in-out infinite;
-  -webkit-animation: loading 1s  ease-in-out infinite;
+  animation: loading 1s  linear infinite;
+  -webkit-animation: loading 1s  linear infinite;
 }
 
 /* Utilities */
