--- a/src/index.css
+++ b/src/index.css
@@ -682,8 +682,8 @@ svg.dropdown__icon path{
 }
 
 .loader{
-  height: 50px;
-  width: 50px;
+  height: 40vw;
+  width: 40vw;
   color:rgb(59, 231, 59);
   animation: loading 1s  linear infinite;
   -webkit-animation: loading 1s  linear infinite;
