--- a/src/index.css
+++ b/src/index.css
@@ -681,16 +681,13 @@ svg.dropdown__icon path{
   z-index: 40;
 }
 
-.loader{
+.loader path{
   height: 40vw;
   width: 40vw;
+  stroke-width: 2px;
   color:rgb(59, 231, 59);
   animation: loading 1s  linear infinite;
   -webkit-animation: loading 1s  linear infinite;
-}
-
-svg.loader {
-  stroke-width: 0;
 }
 
 /* Utilities */
