chenge loader thickness

--- a/src/index.css
+++ b/src/index.css
@@ -681,13 +681,16 @@ svg.dropdown__icon path{
   z-index: 40;
 }
 
-.loader path{
+.loader{
   height: 40vw;
   width: 40vw;
-  stroke-width: 5px;
   color:rgb(59, 231, 59);
   animation: loading 1s  linear infinite;
   -webkit-animation: loading 1s  linear infinite;
+}
+
+.loader path{
+  stroke-width: 5px;
 }
 
 /* Utilities */
