add delete action to subdecks page

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  height:calc(100 * var(--vh));
+  height:100vh;
 }
 
 li{
