add popup to subdeck page

--- a/src/index.css
+++ b/src/index.css
@@ -200,6 +200,12 @@ code {
   overflow-y: scroll;
 }
 
+.popup__inner{
+  width: 80%;
+  height: 80%;
+  background-color: var(--dark-grey);
+}
+
 .popup__close{
   width: 4vh;
   height: 4vh;
