--- a/src/index.css
+++ b/src/index.css
@@ -690,6 +690,11 @@ svg.dropdown__icon path{
   cursor: pointer;
 }
 
+.subdeck .popup__body{
+  width: 100%;
+  height: 70%;
+}
+
 .loader__block{
   background-color: rgba(46, 46, 46, .95);
   width:100vw;
