--- a/src/index.css
+++ b/src/index.css
@@ -692,7 +692,11 @@ svg.dropdown__icon path{
 
 .subdeck .popup__body{
   width: 100%;
-  height: 80%;
+  height: 100%;
+}
+
+.subdeck .popup__footer{
+  width: 100%;
 }
 
 .loader__block{
