add popup to subdeck page

--- a/src/index.css
+++ b/src/index.css
@@ -693,6 +693,7 @@ svg.dropdown__icon path{
 .subdeck .popup__body{
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
 }
 
 .subdeck .popup__footer{
