--- a/src/index.css
+++ b/src/index.css
@@ -791,6 +791,30 @@ svg.dropdown__icon path{
   margin: 6vh !important;
 }
 
+.mx-1{
+  margin: 0 1vh !important;
+}
+
+.mx-2{
+  margin: 0 2vh !important;
+}
+
+.mx-3{
+  margin: 0 3vh !important;
+}
+
+.mx-4{
+  margin: 0 4vh !important;
+}
+
+.mx-5{
+  margin: 0 5vh !important;
+}
+
+.mx-6{
+  margin: 0 6vh !important;
+}
+
 .my-1{
   margin: 1vh 0 !important;
 }
