--- a/src/index.css
+++ b/src/index.css
@@ -915,6 +915,10 @@ svg.dropdown__icon path{
   margin-left: 2vh !important;
 }
 
+.p-0{
+  padding: 0 !important;
+}
+
 .p-1{
   padding: 1vh !important;
 }
