--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root{
   --error : #ff5d5d;
-  --done: rgb(59, 231, 59);
+  --done: #3be73b;
   --black : #101010;
   --dark-grey : #202020;
   --grey: #404040;
