--- a/src/index.css
+++ b/src/index.css
@@ -283,7 +283,11 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color:var(--dark-grey)
+  color:var(--dark-grey);
+  border: 1px #202020 dashed;
+  border-radius: 12px;
+  padding: 2vh;
+  font-size: 20px;
 }
 
 .profile__avatar{
