test onChange for file upload

--- a/src/index.css
+++ b/src/index.css
@@ -292,7 +292,13 @@ code {
 }
 
 .profile__avatar{
-  font-size:20vh;
+  height:20vh;
+  width: 20vh;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 
 .profile__avatar--button{
