--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ html{
   height: -webkit-fill-available;
 }
 
+html, body{
+  scrollbar-color: yellow blue !important;
+}
+
 html,body,div,p,h1,h2,h3,h4,ul,li,a,figure,button,input,form{
   margin:0;
   padding: 0;
