--- a/src/index.css
+++ b/src/index.css
@@ -201,8 +201,8 @@ code {
   min-height: 100%;
   width: 100%;
   background-color: var(--white);
-  padding-top: 2vh;
-  padding-bottom: 5vh;
+  margin-top: 2vh;
+  margin-bottom: 6vh;
 }
 
 .empty__container{
