change deck form css

--- a/src/index.css
+++ b/src/index.css
@@ -378,7 +378,23 @@ code {
 .deck.form{
   height:0;
   padding:0;
+  opacity: 0;
   overflow-y: hidden;
+  transition: all 1s ease;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  -o-transition: all 1s ease;
+}
+
+.deck.form.isOpen{
+  min-height: 100%;
+  opacity: 1;
+  transition: all 1s ease;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  -o-transition: all 1s ease;
 }
 
 .form--container{
