--- a/src/index.css
+++ b/src/index.css
@@ -388,7 +388,7 @@ code {
 }
 
 .deck.form.isOpen{
-  min-height: 100%;
+  height: 600px;
   opacity: 1;
   transition: all 1s ease;
   -webkit-transition: all 1s ease;
