--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,11 @@ html,body,div,p,h1,h2,h3,h4,ul,li,a,figure,button,input,form{
   box-sizing: border-box; 
 }
 
+html,
+body{
+  min-height: 100vh;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
