change deck form css

--- a/src/index.css
+++ b/src/index.css
@@ -736,6 +736,9 @@ svg.dropdown__icon path{
 }
 
 .subdeck__body{
+  display:grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
   border: 1px solid var(--dark-grey);
 }
 
