change deck form css

--- a/src/index.css
+++ b/src/index.css
@@ -740,6 +740,7 @@ svg.dropdown__icon path{
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
   border: 1px solid var(--dark-grey);
+  grid-auto-rows: auto;
 }
 
 .one{
