--- a/src/index.css
+++ b/src/index.css
@@ -738,14 +738,14 @@ svg.dropdown__icon path{
 .subdeck__body{
   display:grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
   border: 1px solid var(--dark-grey);
   grid-auto-rows: auto;
 }
 
 .one{
-  grid-column: 1;
+  grid-row: 1;
   height:112px;
   background-color:black; 
 }
