change deck form css

--- a/src/index.css
+++ b/src/index.css
@@ -738,7 +738,7 @@ svg.dropdown__icon path{
 .subdeck__body{
   display:grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   grid-gap: 10px;
   border: 1px solid var(--dark-grey);
   grid-auto-rows: auto;
