change deck form css

--- a/src/index.css
+++ b/src/index.css
@@ -744,7 +744,7 @@ svg.dropdown__icon path{
 }
 
 .card__thumbnail--container{
-    background-color:var(--black)
+    border: 2px dashed black;
 }
 
 .subdeck__type{
