--- a/src/index.css
+++ b/src/index.css
@@ -745,6 +745,11 @@ svg.dropdown__icon path{
 
 .card__thumbnail--container{
     border: 2px dashed black;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
 }
 
 .subdeck__type{
