--- a/src/index.css
+++ b/src/index.css
@@ -744,6 +744,9 @@ svg.dropdown__icon path{
 }
 
 .card__thumbnail--container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
     border: 2px dashed black;
     border-radius: 4px;
     -webkit-border-radius: 4px;
