--- a/src/index.css
+++ b/src/index.css
@@ -749,7 +749,7 @@ svg.dropdown__icon path{
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
     -o-border-radius: 4px;
-    color: black;
+    color: var(--dark-grey);
 }
 
 .subdeck__type{
