--- a/src/index.css
+++ b/src/index.css
@@ -1410,6 +1410,7 @@ svg.dropdown__icon path{
   background-color: var(--white);
   width:90%;
   overflow-y:scroll;
+  overflow-x: hidden;
   gap:12px 16px;
   margin:0 auto;
   justify-content: center;
