start hoc for infinite scroll

--- a/src/index.css
+++ b/src/index.css
@@ -206,6 +206,10 @@ input.toolbar__icon:focus{
   text-align:center;
 }
 
+.subdeck.page{
+  justify-content: flex-start;
+}
+
 .page--container{
   position: relative;
   height: calc(65 * var(--vh));
