--- a/src/index.css
+++ b/src/index.css
@@ -209,6 +209,7 @@ input.toolbar__icon:focus{
 .subdeck.page{
   justify-content: flex-start;
   height:80vh;
+  margin-top:3vh;
 }
 
 .page--container{
