change margin on eden subdeck block

--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,9 @@ code {
 
 /*cards counter*/
 .cards__counter--container{
+  position: absolute;
+  top: 8px;
+  left: 8px;
   background-color: var(--dark-grey);
   height: 64px;
   width: 64px;
@@ -149,10 +152,11 @@ code {
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
+  opacity: .85;
 }
 
 .card__counter{
-  color: var(--light-grey)
+  color: var(--done)
 }
 
 /* return */ 
